fix(layout): fix switch language menu truncated on pages with less than full height

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -103,9 +103,12 @@ html.sidebarOpen {
 }
 
 body {
+  @marginTop: 49px;
+
   display: block;
-  margin-top: 49px;
+  margin-top: @marginTop;
   padding-top: 28px;
+  min-height: calc(100vh - @marginTop);
 }
 
 @media only screen and (max-width: 1127px) {
